--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
   <p><span class="selected">Glitch in the Race</span>, 2020, Landscape</p>
 </div></a>
 <a href="artwork7.html"><div class="imagegroup">
-  <img src="https://i.gyazo.com/183da3d07974924fd8246ec6c4c2c518.png">
-  <p><span class="selected">Highschool In a Nutshell #1</span>, 2018, Animation</p>
+  <img src="https://i.imgur.com/M38Jj5t.jpg">
+  <p><span class="selected">Trip In My Days</span>, 2020, Photograph</p>
 </div></a>
 <center><a href="artwork8.html"><div class="imagegroup">
   <img src="https://i.gyazo.com/e857397abb58130b0089e08ca6256e52.png">
